--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_margin="20dp"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@+id/changeUserName"
         tools:layout_editor_absoluteX="20dp" />
@@ -155,7 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_margin="20dp"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@+id/changeDescription"
         tools:layout_editor_absoluteX="16dp" />
