--- a/app/src/main/res/layout/fragment_pantalla_perfil.xml
+++ b/app/src/main/res/layout/fragment_pantalla_perfil.xml
@@ -126,15 +126,14 @@
         app:layout_constraintTop_toBottomOf="@+id/image"
         app:layout_constraintLeft_toLeftOf="@+id/image"
         />
+
     <TextView
-        android:text="Descripcion"
         android:id="@+id/descp"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@+id/username"
         app:layout_constraintLeft_toLeftOf="@+id/username"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/username" />
     <TextView
         android:text="Mis recetas"
         android:id="@+id/titlerecetas"
