--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -59,31 +59,8 @@
         android:label="fragment_pantalla_Recuperar_Clave"
         tools:layout="@layout/fragment_restablecer_password1" >
         <action
-            android:id="@+id/action_pantallaClave1_to_pantallaClave2"
-            app:destination="@id/pantallaCambiarClave2" />
-        <action
             android:id="@+id/action_pantallaClave1_to_pantallaDeInicio"
             app:destination="@id/pantallaDeInicio" />
-    </fragment>
-    <fragment
-        android:id="@+id/pantallaCambiarClave2"
-        android:name="com.example.trabajofinalv2.RecuperarClave2"
-        android:label="fragment_pantalla_recuperar_Clave2"
-        tools:layout="@layout/fragment_restablecer_password2" >
-        <action
-            android:id="@+id/action_pantallaClave2_to_pantallaClave3"
-            app:destination="@id/pantallaCambiarClave3" />
-        <action
-            android:id="@+id/action_pantallaClave2_to_pantallaDeInicio"
-            app:destination="@id/pantallaDeInicio" />
-    </fragment>
-    <fragment android:id="@+id/pantallaCambiarClave3"
-        android:name="com.example.trabajofinalv2.RecuperarClave3"
-        android:label="fragment_pantalla_recuperar_Clave3"
-        tools:layout="@layout/fragment_restablecer_password3" >
-    <action
-        android:id="@+id/action_pantallaClave3_to_pantallaDeInicio"
-        app:destination="@id/pantallaDeInicio" />
     </fragment>
     <fragment android:id="@+id/pantallaprincipal"
         android:name="com.example.trabajofinalv2.PantallaPrincipal"
@@ -122,6 +99,9 @@
         <action
             android:id="@+id/action_pantallaEditarPefil_to_pantallaMenuInferior2"
             app:destination="@id/pantallaMenuInferior" />
+        <action
+            android:id="@+id/action_pantallaEditarPefil_to_cambiarContraseña"
+            app:destination="@id/cambiarContraseña" />
     </fragment>
     <fragment android:id="@+id/pantallaAnadirReceta"
         android:name="com.example.trabajofinalv2.AnadirReceta1"
@@ -161,6 +141,18 @@
         android:name="com.example.trabajofinalv2.verRecetas"
         android:label="fragment_ver_recetas"
         tools:layout="@layout/fragment_verrecetas">
+    </fragment>
+    <fragment
+        android:id="@+id/cambiarContraseña"
+        android:name="com.example.trabajofinalv2.ui.theme.CambiarContraseña"
+        android:label="cambiar_contrasena"
+        tools:layout="@layout/cambiar_contrasena" >
+        <action
+            android:id="@+id/action_cambiarContraseña_to_pantallaEditarPefil"
+            app:destination="@id/pantallaEditarPefil" />
+        <action
+            android:id="@+id/action_cambiarContraseña_to_pantallaMenuInferior2"
+            app:destination="@id/pantallaMenuInferior" />
     </fragment>
 
 
